# opl

./: .gitignore  HelloWorld.hs  HelloWorld2.hs  LICENSE  Makefile  Ontology.html  Ontology.md  README.html  README.md  opl.cabal  todo.md
old/Lang/OPL/Calculus/: Lang.hs
opl_source/: comments.opl  not_yet_supported.opl  prog1.opl  sample.opl
src/Lang/OPL/: Algebra.hs  Annotated.hs  Calculus.hs  Check.hs  CheckMonad.hs  Combinator.hs  CombinatorMorphism.hs  Common.hs  Denotation.hs  Lexer.hs  Main.hs  Message.hs  Parser.hs  Semantics.hs  Syntax.hs  TypeCheckMonad.hs  TypeChecker.hs
src/Lang/OPL/Calculus/: Lang.hs  Parser.hs
src/Lang/OPL/Denotation/: Lang.hs
src/Util/: Either.hs  Parsec.hs
vim_syntax/: operad.vim
